src/components/banner/banner.scss
@import '../../assets/scss/variables';
@import '../../assets/scss/utilities'; // --------------------------------
// Banner sizes
// Use https://developer.mozilla.org/en-US/docs/Web/CSS/aspect-ratio
// when there is better browser support.
// --------------------------------

.banner {
  flex-basis: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 15rem;

  &--large {
    &::before {
      float: left;
      padding-top: 45.25%;
      content: '';
    }
  }

  &--medium {
    &::before {
      float: left;
      padding-top: 32.25%;
      content: '';
    }
  }

  &--full {
    &.banner--large {
      @include breakpoint(page-container) {
        height: 100vh;
      }
    }
  }

  &::after {
    display: block;
    content: '';
    clear: both;
    @include breakpoint(page-container) {
      display: block;
      content: '';
      clear: both;
    }
  }
}
// --------------------------------
// Alignment
// --------------------------------

.banner {
  position: relative;
  overflow: hidden;
  @include breakpoint(sm) {
    flex-basis: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  &.banner--vertical-bottom {
    align-items: flex-end;
  }

  &.banner--horizontal-center {
    text-align: center;

    blockquote {
      border-left: none;
    }

    .banner__content {
      > * {
        margin-right: auto;
        margin-left: auto;
      }
    }
  }
}
// --------------------------------
// Container
// --------------------------------

.banner {
  &:focus-within .headline a:focus {
    text-decoration: underline;
  }

  &__container {
    margin: 0 auto;
    width: 100%;
    z-index: 1;
    @include breakpoint(sm) {
      z-index: 1;
      max-width: 81.875em;
      top: 0;
    }
  }
}
// --------------------------------
// Actions/buttons
// --------------------------------

.banner {
  .headline + .banner__action {
    margin-top: 1.5rem;
  }

  .banner__action .bttn {
    margin: 0 1rem 1rem 0;

    + .bttn {
      @include breakpoint(sm) {
        margin: 0 1rem 1rem 0;
      }
    }
  }
}
// --------------------------------
// Pre-title
// --------------------------------

.banner {
  &.banner--gradient-light {
    .banner__pre-title {
      &.headline.headline--highlight {
        span {
          [class*="bg--black"] & {
            @include breakpoint(sm) {
              color: $secondary;
            }
          }
        }
      }
    }
  }

  &__pre-title {
    background: none;
    line-height: 1.1;

    &.headline.headline--serif {
      margin-bottom: 0;
    }

    &.headline.headline--uppercase {
      margin-bottom: 0.7rem;
    }

    &.headline.headline--highlight {
      margin-bottom: -.1rem;
    }

    &.headline.headline--highlight {
      span {
        background: none;

        [class*="bg--"] [class*="bg--black"] &,
        [class*="bg--black"] &,
        [class*="bg--black"] [class*="banner--gradient-dark"]:not([class*="bg--"]) &,
        [class*="bg--gold"] [class*="banner--gradient-dark"][class*="bg--black"] &,
        [class*="banner--gradient-dark"]:not([class*="bg--"]):not([class*="banner--stacked"]) & {
          color: #fff;
        }

        [class*="banner--gradient-dark"]:not([class*="bg--"]) & {
          @include breakpoint(sm) {
            color: #fff;
          }
        }

        [class*="bg--gold"] [class*="banner--gradient-dark"] & {
          color: $secondary;
          @include breakpoint(sm) {
            color: #fff;
          }
        }

        [class*="bg--gold"] &,
        [class*="bg--gold"] [class*="banner--gradient-dark"][class*="bg--gold"] &,
        [class*="bg--gold"] [class*="banner--gradient-dark"][class*="bg--gray"] &,
        [class*="bg--gold"] [class*="banner--gradient-dark"][class*="bg--white"] &,
        [class*="bg--black"] [class*="banner--gradient-light"]:not([class*="banner--stacked"]) &,
        [class*="bg--white"] &,
        [class*="bg--gray"] & {
          color: $secondary;
        }
      }
    }
    // Set large heading size
    &.headline--large {
      font-size: $h4-font-size;
      font-size: containerClamp(1.2rem, 1.6rem);
    }
    // Set medium heading size
    &.headline--medium {
      font-size: 1.4rem;
      font-size: containerClamp(1.2rem, 1.4rem);
    }
    // Set small heading size
    &.headline--small {
      font-size: $h5-font-size;
    }
  }

  &__stacked {
    //&[class*="banner--gradient-dark"]:not([class*="bg--"]) {
    //
    //.banner__pre-title.headline.headline--highlight {
    //    span {
    //      color: $secondary;
    //      @include breakpoint(sm) {
    //        color: #fff;
    //      }
    //    }
    //  }
    //}
    //&[class*="banner--gradient-light"]:not([class*="bg--"]) {
    //  .banner__pre-title.headline.headline--highlight span {
    //    [class*="bg--black"] & {
    //      color: #fff;
    //    }
    //  }
    //  }
    &[class*="banner--gradient-dark"] {
      .banner__pre-title.headline--highlight span {
        color: $secondary;

        [class*="bg--black"] & {
          color: #fff;
          @include breakpoint(sm) {
            // color: $secondary;
          }
        }
        @include breakpoint(sm) {
          color: #fff;
          text-shadow: 0 1px 1px #000;
        }
      }
    }
  }
}
/* ... */

